--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -102,6 +102,12 @@ service logd /sbin/logd
     disabled
     seclabel u:r:recovery:s0
 
+service vendor.health-2-0 /system/bin/android.hardware.health@2.0-service
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
+
 service time_daemon /sbin/time_daemon
     user root
     group root
@@ -110,6 +116,14 @@ service time_daemon /sbin/time_daemon
 
 on boot
     setprop sys.usb.config adb
+
+on property:sys.usb.config=fastboot
+   start servicemanager
+   start hwservicemanager
+   start boot-1-0
+   start vendor.health-2-0
+   start load_ts_firmware
+   restart fastbootd
 
 on init
     start logd
